--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,11 @@
     background-color: darkgreen;
 }
 
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 2.5rem;
+}
+
