--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,12 +7,16 @@
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
+
+.footer-content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row-reverse;
+  }
 
 
 .card-img-top {
@@ -20,3 +24,16 @@
     height: 15vw;
     object-fit: cover;
 }
+
+.circle {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: darkgreen;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    right: 20px;
+  }
+  
