--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,7 +33,7 @@
 .loader {
     @extend .middle;
     border: 16px solid #f3f3f3; /* Light grey */
-    border-top: 16px solid #3498db; /* Blue */
+    border-top: 16px solid darkgreen; /* Blue */
     border-radius: 50%;
     width: 120px;
     height: 120px;
