small adjustment to css style to remove footer grey background

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,8 @@
     pointer-events: none;
 }
 
+
+
 .btn {
     pointer-events: all;
 
@@ -86,6 +88,7 @@
     border-top: 0;
     display: flex;
     flex-direction: row-reverse;
+    background-color: white;
 }
 
 .gg-search {
